force-app/main/default/objects/Slack_FAQ__c/Slack_FAQ__c.object-meta.xml
<CustomObject>
    <label>Slack FAQ</label>
    <nameField>
        <displayFormat>FAQ-{00000}</displayFormat>
        <label>FAQ Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Slack FAQs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>