force-app/main/default/objects/Slack_FAQ__c/fields/Approved_By__c.field-meta.xml
<CustomField>
    <fullName>Approved_By__c</fullName>
    <description>User who approved this FAQ</description>
    <label>Approved By</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 