force-app/main/default/objects/Slack_FAQ__c/fields/Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Approved_Date__c</fullName>
    <description>Date when this FAQ was approved</description>
    <label>Approved Date</label>
    <type>DateTime</type>
</CustomField> 