force-app/main/default/objects/Slack_FAQ__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>FAQ category for organization</description>
    <label>Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>