force-app/main/default/objects/Slack_FAQ__c/fields/Document__c.field-meta.xml
<CustomField>
    <fullName>Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The source document this FAQ was generated from</description>
    <label>Source Document</label>
    <referenceTo>Slack_Document__c</referenceTo>
    <relationshipLabel>FAQs</relationshipLabel>
    <relationshipName>FAQs</relationshipName>
    <type>Lookup</type>
</CustomField>