force-app/main/default/objects/Slack_FAQ__c/fields/Source_Documents__c.field-meta.xml
<CustomField>
    <fullName>Source_Documents__c</fullName>
    <description>Source document IDs that this FAQ was generated from</description>
    <label>Source Documents</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField> 