force-app/main/default/objects/Slack_FAQ__c/fields/Source_Messages__c.field-meta.xml
<CustomField>
    <fullName>Source_Messages__c</fullName>
    <description>Original Slack messages used to generate this FAQ</description>
    <label>Source Messages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>